update yml for db connection

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -46,6 +46,13 @@ jobs:
         echo "DB_DATABASE=laravel" >> .env
         echo "DB_USERNAME=root" >> .env
         echo "DB_PASSWORD=root" >> .env
+        
+    - name: Wait for MySQL
+      run: |
+        until mysqladmin ping -h"mysql" -uroot -proot --silent; do
+          echo "Waiting for database connection..."
+          sleep 5
+        done
 
     - name: Run Migrations
       run: php artisan migrate --force
